Issue #28385: An error message when non-empty format spec is passed to object.__format__ now contains the name of actual type.